# nanodock

./: .editorconfig  .gitattributes  Cargo.toml  README.md  clippy.toml  deny.toml  rustfmt.toml
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: ci.yml  release.yml
benches/: benchmarks.rs
docs/: CONTRIBUTING.md
hooks/: commit-msg  commit-msg.bat  pre-commit  pre-commit.bat  pre-push  pre-push.bat
scripts/: Test-CommitMessage.ps1  check-platform-clippy.ps1  check-platform-clippy.sh  install-hooks.ps1  install-hooks.sh
src/: api.rs  http.rs  ipc.rs  lib.rs  podman.rs
